find_package(GTest REQUIRED)

add_subdirectory(1_two_sum)
add_subdirectory(7_reverse_integer)
add_subdirectory(9_palindrome_number)
add_subdirectory(57_insert_interval)
add_subdirectory(1674_minimum_moves_to_make_array_complementary)
add_subdirectory(224_basic_calculator)
add_subdirectory(282_expression_add_operators)
add_subdirectory(134_gas_station)
add_subdirectory(5884_the_score_of_students_solving_math_expression)
add_subdirectory(782_transform_to_chessboard)
add_subdirectory(5893_smallest_k-length_subsequence_with_occurrences_of_a_letter)
add_subdirectory(442_find_all_duplicates_in_an_array)
