add_executable(check_if_an_original_string_exists_given_two_encoded_strings_test check_if_an_original_string_exists_given_two_encoded_strings_test.cpp)
target_link_libraries(check_if_an_original_string_exists_given_two_encoded_strings_test GTest::GTest glog)
gtest_discover_tests(check_if_an_original_string_exists_given_two_encoded_strings_test)